--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 </head>
 <body class='skin-blue fixed sidebar-mini'>
     <div id="app"></div>
-    <script src='apps.js'></script>
+    <script src='app.js'></script>
 </body>
 </html>
